[gd_scene load_steps=13 format=3 uid="uid://b7t4bj27c8b68"]

[ext_resource type="Script" path="res://scenes/start_menu/start_menu.gd" id="1_titvs"]
[ext_resource type="Theme" uid="uid://cvdcsgkxe4hex" path="res://assets/ui/universal_theme.tres" id="4_qk3dk"]
[ext_resource type="Texture2D" uid="uid://bho5tbem6kb6" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Button_Small_Release_02a3.png" id="5_ww06t"]
[ext_resource type="Texture2D" uid="uid://clw0d6y4veguv" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Button_Small_Release_02a2.png" id="6_q601k"]
[ext_resource type="Texture2D" uid="uid://5f4v7yv64yjp" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Button_Small_Release_02a4.png" id="7_0yth2"]
[ext_resource type="PackedScene" uid="uid://b7y0fa3d2vk6e" path="res://scenes/start_menu/Animated_Logo.tscn" id="7_4j87y"]
[ext_resource type="Texture2D" uid="uid://dnyphifrfndt3" path="res://assets/ui/04_Stone_Theme/Sprites/UI_Stone_Cross_Large_01a.png" id="8_eftc6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ma8q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_th63b"]
content_margin_top = 1.0
content_margin_bottom = 17.0
texture = ExtResource("5_ww06t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ubk5"]
content_margin_top = 11.0
content_margin_bottom = 2.0
texture = ExtResource("6_q601k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f302d"]
content_margin_bottom = 22.0
texture = ExtResource("7_0yth2")

[sub_resource type="GDScript" id="GDScript_gkhb2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_titvs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -430.0
offset_right = 250.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_qk3dk")
text = "Play Game"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_qk3dk")
text = "How To Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_qk3dk")
text = "Settings"

[node name="quit button" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1800.0
offset_top = 20.0
offset_right = 1900.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3ma8q")

[node name="QuitButton" type="Button" parent="quit button"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_th63b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5ubk5")
theme_override_styles/normal = SubResource("StyleBoxTexture_f302d")
icon = ExtResource("8_eftc6")
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" parent="." instance=ExtResource("7_4j87y")]
position = Vector2(950, 350)
scale = Vector2(2, 1.902)
script = SubResource("GDScript_gkhb2")

[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HelpButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/SettingsButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="quit button/QuitButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="quit button/QuitButton" to="." method="_on_quit_button_pressed"]
